game completed with blackening and random color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="squaresNumber">Input the size of the grid in squares length</button>
+    <div class="buttons">
+        <button id="squaresNumber">Input the size of the grid in squares length</button>
+        <button id="randomColor">Paint in random colors</button>
+        <button id="blackeningColor">Use pencil</button>
+    </div>
     <div class="container">
 
     </div>
